static/src/js/components/CollectionResults/CollectionResultsItem.scss
.collection-results-item {
  border-bottom: 1px solid $border-color;

  &__link {
    display: flex;
    padding: $spacer/2 $spacer;
    background-color: $color__white;

    &:hover,
    &:active {
      cursor: pointer;
      background-color: $color__black--100;
    }
  }

  &__body {
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: 100%;
  }

  &__body-primary {
    display: flex;
  }

  &__body-secondary {
    display: block;
    line-height: 1;
  }

  &__thumb {
    display: none;
    align-items: center;
    justify-content: center;
    flex-basis: auto;
    flex-shrink: 0;
    flex-grow: 0;
    padding: 0.25rem;
    width: 75px;
    height: 75px;
    margin-right: $spacer;
    background: $color__black--900;
    font-size: 0.5rem;
    overflow: hidden;

    .panels--sm & {
      display: flex;
    }
  }

  &__thumb-image {
    width: 100%;
    height: 100%;
    object-fit: contain;
  }

  &__info {
    will-change: width;
    flex-grow: 1;
    flex-basis: 100%;
  }

  &__title {
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    overflow: hidden;
    margin-top: $spacer * 0.25;
    margin-bottom: $spacer * 0.325;
    font-size: 0.75rem;
    font-weight: 700;
    color: $color__black--800;

    .panels--md & {
      display: block;
      -webkit-line-clamp: initial;
      -webkit-box-orient: initial;
    }
  }

  &__desc {
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    overflow: hidden;
    margin-bottom: $spacer * 0.25;
    font-size: 0.75rem;
    color: $color__black--600;
    word-break: break-all;

    strong {
      color: $color__black--600;
      font-size: 0.725rem;
    }

    .panels--md & {
       -webkit-line-clamp: 2;
    }
  }

  &__actions {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-left: $spacer;

    .panels--md & {
      flex-direction: row;
    }
  }

  &__action {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: $spacer/4;
    color: $color__black--500;
    padding: 0.625rem 0.825rem;
    font-size: 0.925rem;

    .panels--sm & {
      padding: 0.625rem 0.825rem;
      font-size: 1rem;
    }

    .panels--md & {
      margin-bottom: 0;
      margin-right: $spacer/4;
    }

    &:last-child {
      margin-right: 0;
    }

    .collection-results-item__link:hover & {
      background-color: $color__black--200;
      color: $color__black--600;
    }

    .edsc-icon {
      height: 1.125rem;
      width: 1.125rem;
    }

    &--add {
      color: $color__green;

      .collection-results-item__link:hover & {
        color: $color__green;
      }

      &:hover {
        color: darken($color__green, 20);
      }

    }

    &--remove {
      color: $color__red;

      .collection-results-item__link:hover & {
        color: $color__red;
      }

      &:hover {
        color: darken($color__red, 20);
      }
    }
  }

  &__badge {
    word-break: break-all;
    line-break: normal;
    white-space: normal;
    margin-right: $spacer/4;
    margin-bottom: $spacer/8;
    color: $color__white;
    text-transform: uppercase;

    &:hover {
      cursor: default;
    }

    .split-badge__primary{
      display: inline-block;
      text-transform: uppercase;
    }

    .split-badge__secondary {
      display: inline-block;
      text-transform: none;
    }
  }

  &__badge-icon {
    &:last-child {
      margin-right: 0;
    }

    &--csda {
      position: relative;
      top: -0.05rem;
    }
  }

  &__badge--attribution {
    background-color: $color__black--400;
    text-transform: none;
  }

  &__badge--cwic {
    background-color: $color__yellow;
  }

  &__badge--map-imagery {
    background-color: $color__orange;
  }

  &__badge--near-real-time {
    background-color: $color__neon-green;
  }

  &__badge-tooltip {
    font-size: 0.75rem;

    &--csda {
      .tooltip-inner {
        max-width: 14rem;
      }
    }
  }

  &__badge-tooltip-secondary {
    font-size: 0.675rem;
    color: $color__black--300;
    display: block;
  }
}

